--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="main" class="h-full p-4 z-[48] flex justify-center flex-wrap w-full">
         <div class="flex justify-center items-center w-full h-full">
             <img src="./images/home.jpg" class=" object-cover opacity-50 absolute top-0 w-full h-full">
-            <p id="title" class="text-9xl lobster tracking-widest text-slate-100" style="filter: drop-shadow(0 0 6px white);">Bhramara</p>
+            <p id="title" class="md:text-9xl text-6xl lobster tracking-widest text-slate-100" style="filter: drop-shadow(0 0 6px white);">Bhramara</p>
         </div>
     </div>
 
